==> jepler/circuitpython/ports/nrf/common-hal/microcontroller/__init__.c <==
#include "py/mphal.h"
#include "py/obj.h"
#include "py/runtime.h"
#include "common-hal/microcontroller/Pin.h"
#include "common-hal/microcontroller/Processor.h"
#include "shared-bindings/nvm/ByteArray.h"
#include "shared-bindings/microcontroller/__init__.h"
#include "shared-bindings/microcontroller/Pin.h"
#include "shared-bindings/microcontroller/Processor.h"
#include "supervisor/filesystem.h"
#include "supervisor/port.h"
#include "supervisor/shared/safe_mode.h"
#include "nrfx_glue.h"
#include "nrf_nvic.h"

void common_hal_mcu_enable_interrupts() {
    if (nesting_count == 0) {
        // This is very very bad because it means there was mismatched disable/enables so we
        // crash.
        reset_into_safe_mode(HARD_CRASH);
    }
    nesting_count--;
    if (nesting_count > 0) {
        return;
    }
    __DMB();
    sd_nvic_critical_region_exit(is_nested_critical_region);
}

void common_hal_mcu_on_next_reset(mcu_runmode_t runmode) {
    enum { DFU_MAGIC_UF2_RESET = 0x57 };
    if(runmode == RUNMODE_BOOTLOADER)
        NRF_POWER->GPREGRET = DFU_MAGIC_UF2_RESET;
    else
        NRF_POWER->GPREGRET = 0;
    if(runmode == RUNMODE_SAFE_MODE)
        safe_mode_on_next_reset(PROGRAMMATIC_SAFE_MODE);
}
